--- a/_publications/2024-02-26-meta-nlf.md
+++ b/_publications/2024-02-26-meta-nlf.md
@@ -1,15 +1,13 @@
 ---
 title: "Meta-Learning-Based Adaptive Stability Certificates for Dynamical Systems"
 collection: publications
-permalink: /publication/2009-10-01-paper-title-number-1
-excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
+permalink: /publication/2024-02-26-meta-nlf
+excerpt: 'This paper proposed a meta-learning-based adpative Lyapunov function that swiftly adpats to any test-time instances of a dynamical system with parametric uncertainty.'
 date: 2024-02-26
 venue: 'AAAI-24'
 paperurl: 'https://arxiv.org/abs/2312.15340'
-citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
+citation: ''
 ---
-This paper is about the number 1. The number 2 is left for future work.
-
+<!-- This paper proposed a meta-learning-based adpative Lyapunov function that swiftly adpats to any test-time instances of a dynamical system with parametric uncertainty. -->
 [Download paper here](https://arxiv.org/abs/2312.15340)
 
-Recommended citation: Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1).
